# redfish-python-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
examples/: basic_usage.py  boot_source.py  event_subscription.py  power_management.py
redfish_sdk/: __init__.py  client.py  exceptions.py  http_client.py
redfish_sdk/managers/: __init__.py  _log_helpers.py  account.py  chassis.py  event.py  managers.py  registries.py  session.py  systems.py  task.py  update.py
redfish_sdk/managers/update_strategies/: __init__.py  base.py  h3c.py  inspur.py  lenovo.py  nettrix.py  registry.py  vendor_detect.py  xfusion.py  zte.py
redfish_sdk/models/: __init__.py  account.py  chassis.py  check.py  common.py  drive.py  event.py  fru.py  gpu.py  logs.py  managers.py  memory.py  network_adapter.py  oem.py  pcie_device.py  power.py  processor.py  registry.py  resource_key.py  root.py  session.py  storage.py  systems.py  task.py  thermal.py  update.py
tests/: conftest.py  test_client_mock.py  test_log_entries_mock.py  test_models.py  test_models_mock.py  test_offline_json.py  test_real_bmc.py  test_sdk_mock.py  test_update_strategies.py  test_v1_1_apis_mock.py
tests/helpers/: field_validator.py  json_loader.py
tools/: redfish_drill.py
